--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,9 +26,13 @@ ignore = [
     "ANN",
     "D100",
     "D101",
+    "D103",
     "D104",
+    "D106",
     "D203",
     "D212",
+    "TRY003",
+    "EM101",
     "COM812",
 ]
 
