--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "djangorestframework>=3.16.1",
+    "drf-spectacular>=0.28.0",
     "pydantic-extra-types>=2.10.5",
     "pydantic-settings>=2.10.1",
 ]
