--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.13"
 dependencies = [
     "djangorestframework>=3.16.1",
     "drf-spectacular>=0.28.0",
+    "gunicorn>=23.0.0",
     "psycopg[binary,pool]>=3.2.10",
     "pydantic-extra-types>=2.10.5",
     "pydantic-settings>=2.10.1",
