--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,11 @@ dependencies = [
 
 [dependency-groups]
 dev = [
+    "model-bakery>=1.20.5",
     "pre-commit>=4.3.0",
+    "pytest>=8.4.2",
+    "pytest-cov>=7.0.0",
+    "pytest-django>=4.11.1",
     "ruff>=0.13.0",
 ]
 
@@ -42,3 +46,7 @@ ban-relative-imports = "all"
 "manage.py" = ["PLC0415", "TRY003", "EM101"]
 "tests.py" = ["S101"]
 "tests/**" = ["S101"]
+
+[tool.pytest.ini_options]
+DJANGO_SETTINGS_MODULE = "bookstore.test_settings"
+python_files = ["tests.py", "test_*.py"]
