--- a/.github/workflows/ruff.yml
+++ b/.github/workflows/ruff.yml
@@ -6,6 +6,7 @@ on:
     paths:
       - bookstore/**
       - apps/**
+      - tests/**
       - "!**/migrations/**"
 
   push:
@@ -13,6 +14,7 @@ on:
     paths:
       - bookstore/**
       - apps/**
+      - tests/**
       - "!**/migrations/**"
 
 jobs:
